    + [NT] Fixed an issue where auto-clean would not see the real
      status of some collections.
    + [NT] Keep auto-cleaned collections until all processables in
      the group has been checked.
    + [NT] Attempt guess the version number when running in an git
      checkout or unpacked source dir.  Based on patch from Evan
      Broder.  (Closes: #650701)
  * frontend/lintian-info:
    + [NT] Support new lintian.log format.
    + [NT] Support new override file format with -a.

  * lib/Lintian/Check.pm:
    + [NT] Do not check for missing uploader address as it cannot be
      done reliably anymore.
  * lib/Lintian/Collect/{Binary,Source}.pm:
    + [NT] Assume packages to be non-native when it cannot be
      accurately determined due to missing version field.
  * lib/Lintian/Collect/Binary.pm:
    + [NT] Fixed an error in parsing symbol names when using readelf
      as replacement for objdump.
  * lib/Lintian/Collect/Group.pm:
    + [NT] Made direct_dependencies properly handle udebs.  This fixes
      an error that would cause lintian to skip some checks for udebs.
  * lib/Lintian/Collect/Source.pm:
    + [NT] Removed assumption that source packages always have a
      format field.
  * lib/Lintian/Lab.pm:
    + [NT] Added "is_temp" method to identify temp labs from static
      labs.
  * lib/Lintian/Lab/Entry.pm:
    + [NT] Properly strip whitespace when loading collection status.
  * lib/Lintian/Processable/Package.pm:
    + [NT] Use part of the file name as package name if the mandatory
      "Package" or "Source" fields are missing rather than choking.
  * lib/Lintian/Tag/Info.pm:
    + [NT] Accepted patch from Evan Broder to always output effective
      severity in tag descriptions.

  * reporting/harness:
    + [NT] Removed useless "TODO" message from the log output.
  * reporting/html_reports:
    + [JW] Properly handle uploader names with commas.
    + [NT] Use the severities from profiles when generating tag pages.